--- a/src/components/widget/Profile.astro
+++ b/src/components/widget/Profile.astro
@@ -1,11 +1,14 @@
 ---
+/* No Profile Yet
 import ImageWrapper from '../misc/ImageWrapper.astro'
 import { Icon } from 'astro-icon/components'
 import { profileConfig } from '../../config'
 import { url } from '../../utils/url-utils'
 
 const config = profileConfig
+*/
 ---
+<!--
 <div class="card-base p-3">
     <a aria-label="Go to About Page" href={url('/about/')}
        class="group block relative mx-auto mt-1 lg:mx-0 lg:mt-0 mb-3
@@ -36,4 +39,4 @@ const config = profileConfig
         </div>
     </div>
 </div>
-
+-->
