--- a/src/base.css
+++ b/src/base.css
@@ -223,3 +223,9 @@
 .collapsed {
     height: var(--collapsedHeight);
 }
+
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
