--- a/src/base.css
+++ b/src/base.css
@@ -229,3 +229,11 @@
     overflow: hidden;
     padding-top: 56.25%;
 }
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
