edited comment use range

--- a/src/layouts/CommentNovelGridLayout.astro
+++ b/src/layouts/CommentNovelGridLayout.astro
@@ -2,8 +2,7 @@
 import Footer from '@components/Footer.astro'
 import Navbar from '@components/Navbar.astro'
 import BackToTop from '@components/control/BackToTop.astro'
-import SideBar from '@components/widget/SideBar.astro'
-import { getStoredTheme } from '@utils/setting-utils'
+import NovelSideBar from '@components/widget/NovelSideBar.astro'
 import type { MarkdownHeading } from 'astro'
 import { Icon } from 'astro-icon/components'
 import ImageWrapper from '../components/misc/ImageWrapper.astro'
@@ -81,13 +80,30 @@ const mainPanelTop = siteConfig.banner.enable
             </a>}
 
 
-            <SideBar class="mb-4 row-start-2 row-end-3 col-span-2 lg:row-start-1 lg:row-end-2 lg:col-span-1 lg:max-w-[17.5rem] onload-animation" headings={headings}></SideBar>
+            <NovelSideBar class="mb-4 row-start-2 row-end-3 col-span-2 lg:row-start-1 lg:row-end-2 lg:col-span-1 lg:max-w-[17.5rem] onload-animation" headings={headings}></NovelSideBar>
 
             <main id="swup-container" class="transition-swup-fade col-span-2 lg:col-span-1 overflow-hidden">
                 <div id="content-wrapper" class="onload-animation">
                     <!-- the overflow-hidden here prevent long text break the layout-->
                     <!-- make id different from windows.swup global property -->
                     <slot></slot>
+                    <!-- comments? -->
+                    <script src="https://giscus.app/client.js"
+                        data-repo="melted-mint/fuwari-edited"
+                        data-repo-id="R_kgDONLIzWw"
+                        data-category="Comments"
+                        data-category-id="DIC_kwDONLIzW84CkBlC"
+                        data-mapping="pathname"
+                        data-strict="1"
+                        data-reactions-enabled="1"
+                        data-emit-metadata="1"
+                        data-input-position="top"
+                        data-theme="preferred_color_scheme"
+                        data-lang="en"
+                        data-loading="lazy"
+                        crossorigin="anonymous"
+                        async>
+                    </script>
                     <div class="footer col-span-2 onload-animation hidden lg:block">
                         <Footer></Footer>
                     </div>
@@ -124,3 +140,19 @@ const mainPanelTop = siteConfig.banner.enable
     </div>
 </div>
 </Layout>
+
+<script is:inline>
+    function updateGiscusTheme() {
+      const theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light'
+      const iframe = document.querySelector('iframe.giscus-frame')
+      if (!iframe) return
+      iframe.contentWindow.postMessage({ giscus: { setConfig: { theme } } }, 'https://giscus.app')
+    }
+  
+    const observer = new MutationObserver(updateGiscusTheme)
+    observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] })
+  
+    window.onload = () => {
+      updateGiscusTheme()
+    }
+</script>
