--- a/src/layouts/CommentMainGridLayout.astro
+++ b/src/layouts/CommentMainGridLayout.astro
@@ -88,6 +88,23 @@ const mainPanelTop = siteConfig.banner.enable
                     <!-- the overflow-hidden here prevent long text break the layout-->
                     <!-- make id different from windows.swup global property -->
                     <slot></slot>
+                    <!-- comments? -->
+                    <script src="https://giscus.app/client.js"
+                        data-repo="melted-mint/fuwari-edited"
+                        data-repo-id="R_kgDONLIzWw"
+                        data-category="Comments"
+                        data-category-id="DIC_kwDONLIzW84CkBlC"
+                        data-mapping="pathname"
+                        data-strict="1"
+                        data-reactions-enabled="1"
+                        data-emit-metadata="1"
+                        data-input-position="top"
+                        data-theme="preferred_color_scheme"
+                        data-lang="en"
+                        data-loading="lazy"
+                        crossorigin="anonymous"
+                        async>
+                    </script>
                     <div class="footer col-span-2 onload-animation hidden lg:block">
                         <Footer></Footer>
                     </div>
@@ -124,3 +141,19 @@ const mainPanelTop = siteConfig.banner.enable
     </div>
 </div>
 </Layout>
+
+<script is:inline>
+    function updateGiscusTheme() {
+      const theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light'
+      const iframe = document.querySelector('iframe.giscus-frame')
+      if (!iframe) return
+      iframe.contentWindow.postMessage({ giscus: { setConfig: { theme } } }, 'https://giscus.app')
+    }
+  
+    const observer = new MutationObserver(updateGiscusTheme)
+    observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] })
+  
+    window.onload = () => {
+      updateGiscusTheme()
+    }
+</script>
