--- a/src/base.css
+++ b/src/base.css
@@ -237,3 +237,10 @@
     width: 100%;
     height: 100%;
 }
+
+#box p {
+    margin-left: 28px;
+    margin-right:28px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
