--- a/src/components/control/BackToTop.astro
+++ b/src/components/control/BackToTop.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon/components'
 ---
 
 <!-- There can't be a filter on parent element, or it will break `fixed` -->
-<div class="back-to-top-wrapper hidden lg:block">
+<div class="absolute right-36 2xl:right-0 2xl:opacity-100 w-[3.75rem] h-[3.75rem] z-50 block">
     <div id="back-to-top-btn" class="back-to-top-btn hide flex items-center rounded-2xl overflow-hidden transition" onclick="backToTop()">
         <button aria-label="Back to Top" class="btn-card h-[3.75rem] w-[3.75rem]">
             <Icon name="material-symbols:keyboard-arrow-up-rounded" class="mx-auto"></Icon>
@@ -12,21 +12,14 @@ import { Icon } from 'astro-icon/components'
 </div>
 
 <style lang="stylus">
-.back-to-top-wrapper
-    width: 3.75rem
-    height: 3.75rem
-    position: absolute
-    right: 0
-    top: 0
-
 .back-to-top-btn
     color: var(--primary)
     font-size: 2.25rem
     font-weight: bold
-    border: none
+    border: 1px solid var(--primary)
     position: fixed
-    bottom: 10rem
-    opacity: 1
+    bottom: 2.5rem
+    opacity: 0.6
     cursor: pointer
     transform: translateX(5rem)
     i
