added Bottom Button

--- a/src/layouts/CommentMainGridLayout.astro
+++ b/src/layouts/CommentMainGridLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Footer from '@components/Footer.astro'
 import Navbar from '@components/Navbar.astro'
-import BackToTop from '@components/control/BackToTop.astro'
+import GoTopBottom from '@components/control/GoTopBottom.astro'
 import SideBar from '@components/widget/SideBar.astro'
 import { getStoredTheme } from '@utils/setting-utils'
 import type { MarkdownHeading } from 'astro'
@@ -116,7 +116,7 @@ const mainPanelTop = siteConfig.banner.enable
             </div>
         </div>
 
-        <BackToTop></BackToTop>
+        <GoTopBottom></GoTopBottom>
     </div>
 </div>
 
