--- a/src/layouts/CommentNovelGridLayout.astro
+++ b/src/layouts/CommentNovelGridLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Footer from '@components/Footer.astro'
 import Navbar from '@components/Navbar.astro'
-import BackToTop from '@components/control/BackToTop.astro'
+import GoTopBottom from '@components/control/GoTopBottom.astro'
 import NovelSideBar from '@components/widget/NovelSideBar.astro'
 import type { MarkdownHeading } from 'astro'
 import { Icon } from 'astro-icon/components'
@@ -114,7 +114,7 @@ const mainPanelTop = siteConfig.banner.enable
                 <Footer></Footer>
             </div>
         </div>
-        <BackToTop></BackToTop>
+        <GoTopBottom></GoTopBottom>
     </div>
 </div>
 
