--- a/src/layouts/NovelGridLayout.astro
+++ b/src/layouts/NovelGridLayout.astro
@@ -97,6 +97,7 @@ const mainPanelTop = siteConfig.banner.enable
                 <Footer></Footer>
             </div>
         </div>
+        <GoTopBottom></GoTopBottom>
     </div>
 </div>
 
