--- a/src/components/misc/License.astro
+++ b/src/components/misc/License.astro
@@ -1,18 +1,19 @@
 ---
-import { formatDateToYYYYMMDD } from '../../utils/date-utils'
 import { Icon } from 'astro-icon/components'
 import { licenseConfig, profileConfig } from '../../config'
-import { i18n } from '../../i18n/translation'
 import I18nKey from '../../i18n/i18nKey'
+import { i18n } from '../../i18n/translation'
+import { formatDateToYYYYMMDD } from '../../utils/date-utils'
 
 interface Props {
+  author: string
   title: string
   slug: string
   pubDate: Date
   class: string
 }
 
-const { title, slug, pubDate } = Astro.props
+const { title, slug, pubDate, author = 'Melted_Mint' } = Astro.props
 const className = Astro.props.class
 const profileConf = profileConfig
 const licenseConf = licenseConfig
@@ -28,7 +29,7 @@ const postUrl = decodeURIComponent(Astro.url.toString())
     <div class="flex gap-6 mt-2">
         <div>
             <div class="transition text-black/30 dark:text-white/30 text-sm">{i18n(I18nKey.author)}</div>
-            <div class="transition text-black/75 dark:text-white/75 whitespace-nowrap">{profileConf.name}</div>
+            <div class="transition text-black/75 dark:text-white/75 whitespace-nowrap">{author}</div>
         </div>
         <div>
             <div class="transition text-black/30 dark:text-white/30 text-sm">{i18n(I18nKey.publishedAt)}</div>
