--- a/src/components/NovelPostCard.astro
+++ b/src/components/NovelPostCard.astro
@@ -19,6 +19,7 @@ interface Props {
   description: string
   draft: boolean
   style: string
+  updated?: Date
 }
 const {
   entry,
@@ -30,6 +31,7 @@ const {
   image,
   description,
   style,
+  updated,
 } = Astro.props
 const className = Astro.props.class
 
@@ -54,7 +56,7 @@ const { remarkPluginFrontmatter } = await entry.render()
         </a>
 
         <!-- metadata -->
-        <NovelPostMetadata published={published} tags={tags} category={category} hideTagsForMobile={true} class="mb-4"></NovelPostMetadata>
+        <NovelPostMetadata updated={updated} published={published} tags={tags} category={category} hideTagsForMobile={true} hideUpdateDate={true} class="mb-4"></NovelPostMetadata>
 
         <!-- description -->
         <div class:list={["transition text-75 mb-3.5 pr-4", {"line-clamp-2 md:line-clamp-1": !description}]}>
