--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -160,3 +160,25 @@
 .collapsed {
     height: var(--collapsedHeight);
 }
+
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#box p {
+    margin-left: 28px;
+    margin-right:28px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    font-size: 1rem;
+}
