update to the latest version

--- a/src/components/SpinoffArchivePanel.astro
+++ b/src/components/SpinoffArchivePanel.astro
@@ -79,9 +79,9 @@ function formatTag(tag: string[]) {
               {group.posts.map(post => (
                   <a href={getSpinoffPostUrlBySlug(post.slug)}
                      aria-label={post.data.title}
-                     class="group btn-plain block h-10 w-full rounded-lg hover:text-[initial]"
+                     class="group btn-plain !block h-10 w-full rounded-lg hover:text-[initial]"
                   >
-                      <div class="flex flex-row w-full justify-start items-center h-full">
+                      <div class="flex flex-row justify-start items-center h-full">
                           <!-- date -->
                           <div class="w-[15%] md:w-[10%] transition text-sm text-right text-50">
                               {formatDate(post.data.published)}
