--- a/src/components/control/Pagination.astro
+++ b/src/components/control/Pagination.astro
@@ -52,7 +52,7 @@ const getPageUrl = (p: number) => {
 const getNextUrl = (p: number) => {
   p += 5;
   if (p >= page.lastPage)
-  return `/${page.lastPage}`;
+  return `/${page.lastPage}/`;
   return `/${p}/`;
 }
 
