--- a/src/components/control/SpinoffPagination.astro
+++ b/src/components/control/SpinoffPagination.astro
@@ -48,36 +48,74 @@ const getPageUrl = (p: number) => {
   if (p == 1) return '/spinoff/'
   return `/spinoff/${p}/`
 }
+
+const getNextUrl = (p: number) => {
+  p += 5;
+  if (p >= page.lastPage)
+  return `/spinoff/${page.lastPage}`;
+  return `/spinoff/${p}/`;
+}
+
+const getPrevUrl = (p: number) => {
+  p -= 5;
+  if (p <= 1)
+  return "/spinoff/";
+  return `/spinoff/${p}/`;
+}
 ---
 
 <div class:list={[className, "flex flex-row gap-3 justify-center"]} style={style}>
+  <div class="flex">
+    <div>
+    <a href={url(getPrevUrl(page.currentPage))} aria-label={url(getPrevUrl(page.currentPage))  ? "First Page" : null}
+        class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11 flex-auto",
+            {"disabled": page.currentPage < 6}
+        ]}
+      >
+          <Icon name="material-symbols:keyboard-double-arrow-left" class="text-[1.75rem]"></Icon>
+      </a>
+      </div>
+    <div>  
     <a href={url(page.url.prev || "")} aria-label={page.url.prev ? "Previous Page" : null}
-       class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11",
-           {"disabled": page.url.prev == undefined}
-       ]}
-    >
-        <Icon name="material-symbols:chevron-left-rounded" class="text-[1.75rem]"></Icon>
-    </a>
-    <div class="bg-[var(--card-bg)] flex flex-row rounded-lg items-center text-neutral-700 dark:text-neutral-300 font-bold">
-        {pages.map((p) => {
-            if (p == HIDDEN)
-                return <Icon name="material-symbols:more-horiz" class="mx-1"/>;
-            if (p == page.currentPage)
-                return <div class="h-11 w-11 rounded-lg bg-[var(--primary)] flex items-center justify-center
-                    font-bold text-white dark:text-black/70"
-                >
-                    {p}
-                </div>
-            return <a href={url(getPageUrl(p))} aria-label=`Page ${p}`
-                class="btn-card w-11 h-11 rounded-lg overflow-hidden active:scale-[0.85]"
-            >{p}</a>
-        })}
+        class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11 flex-auto",
+            {"disabled": page.url.prev == undefined}
+        ]}
+      >
+          <Icon name="material-symbols:chevron-left-rounded" class="text-[1.75rem]"></Icon>
+      </a>
+      </div>
+      <div class="bg-[var(--card-bg)] flex flex-row rounded-lg items-center text-neutral-700 dark:text-neutral-300 font-bold">
+          {pages.map((p) => {
+              if (p == HIDDEN)
+                  return <Icon name="material-symbols:more-horiz" class="mx-1"/>;
+              if (p == page.currentPage)
+                  return <div class="h-11 w-11 rounded-lg bg-[var(--primary)] flex items-center justify-center
+                      font-bold text-white dark:text-black/70"
+                  >
+                      {p}
+                  </div>
+              return <a href={url(getPageUrl(p))} aria-label=`Page ${p}`
+                  class="btn-card w-11 h-11 rounded-lg overflow-hidden active:scale-[0.85]"
+              >{p}</a>
+          })}
+      </div>
+      <div class="flex-auto">
+      <a href={url(page.url.next || "")} aria-label={page.url.next ? "Next Page" : null}
+        class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11",
+            {"disabled": page.url.next == undefined}
+        ]}
+      >
+          <Icon name="material-symbols:chevron-right-rounded" class="text-[1.75rem]"></Icon>
+      </a>
     </div>
-    <a href={url(page.url.next || "")} aria-label={page.url.next ? "Next Page" : null}
-       class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11",
-           {"disabled": page.url.next == undefined}
-       ]}
-    >
-        <Icon name="material-symbols:chevron-right-rounded" class="text-[1.75rem]"></Icon>
-    </a>
+    <div class="flex-auto">
+      <a href={url(getNextUrl(page.currentPage))} aria-label={url(getNextUrl(page.currentPage)) ? "Last Page" : null}
+        class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11",
+            {"disabled": page.currentPage > page.lastPage - 5}
+        ]}
+      >
+          <Icon name="material-symbols:double-arrow" class="text-[1.75rem]"></Icon>
+      </a>
+    </div>
+  </div>
 </div>
