--- a/src/components/misc/License.astro
+++ b/src/components/misc/License.astro
@@ -1,9 +1,9 @@
 ---
+import { formatDateToYYYYMMDD } from '../../utils/date-utils'
 import { Icon } from 'astro-icon/components'
 import { licenseConfig, profileConfig } from '../../config'
-import I18nKey from '../../i18n/i18nKey'
 import { i18n } from '../../i18n/translation'
-import { formatDateToYYYYMMDD } from '../../utils/date-utils'
+import I18nKey from '../../i18n/i18nKey'
 
 interface Props {
   author: string
@@ -13,7 +13,7 @@ interface Props {
   class: string
 }
 
-const { title, slug, pubDate, author = 'Melted_Mint' } = Astro.props
+const { title, slug, pubDate, author = "Melted_Mint" } = Astro.props
 const className = Astro.props.class
 const profileConf = profileConfig
 const licenseConf = licenseConfig
