--- a/src/layouts/SpinoffGridLayout.astro
+++ b/src/layouts/SpinoffGridLayout.astro
@@ -1,44 +1,31 @@
 ---
 import Footer from '@components/Footer.astro'
 import Navbar from '@components/Navbar.astro'
-import GoTopBottom from '@components/control/GoTopBottom.astro'
 import SpinoffSideBar from '@components/widget/SpinoffSideBar.astro'
-import type { MarkdownHeading } from 'astro'
-import { Icon } from 'astro-icon/components'
-import ImageWrapper from '../components/misc/ImageWrapper.astro'
-import TOC from '../components/widget/TOC.astro'
-import { siteConfig } from '../config'
-import {
-  BANNER_HEIGHT,
-  BANNER_HEIGHT_EXTEND,
-  MAIN_PANEL_OVERLAPS_BANNER_HEIGHT,
-} from '../constants/constants'
 import Layout from './Layout.astro'
+import { Icon } from 'astro-icon/components'
+import { siteConfig } from '../config'
+import type { MarkdownHeading } from 'astro'
+import TOC from "../components/widget/TOC.astro";
+import ImageWrapper from "../components/misc/ImageWrapper.astro";
+import {BANNER_HEIGHT, BANNER_HEIGHT_EXTEND, MAIN_PANEL_OVERLAPS_BANNER_HEIGHT} from "../constants/constants";
+import GoTopBottom from '@components/control/GoTopBottom.astro'
 
 interface Props {
   title?: string
   banner?: string
   description?: string
   lang?: string
-  setOGTypeArticle?: boolean
-  headings?: MarkdownHeading[]
+  setOGTypeArticle?: boolean;
+  headings? : MarkdownHeading[]
 }
 
-const {
-  title,
-  banner,
-  description,
-  lang,
-  setOGTypeArticle,
-  headings = [],
-} = Astro.props
+const { title, banner, description, lang, setOGTypeArticle, headings = [] } = Astro.props
 const hasBannerCredit =
   siteConfig.banner.enable && siteConfig.banner.credit.enable
 const hasBannerLink = !!siteConfig.banner.credit.url
 
-const mainPanelTop = siteConfig.banner.enable
-  ? `calc(${BANNER_HEIGHT}vh - ${MAIN_PANEL_OVERLAPS_BANNER_HEIGHT}rem)`
-  : '5.5rem'
+const mainPanelTop = siteConfig.banner.enable ? `calc(${BANNER_HEIGHT}vh - ${MAIN_PANEL_OVERLAPS_BANNER_HEIGHT}rem)` : "5.5rem"
 ---
 
 <Layout title={title} banner={banner} description={description} lang={lang} setOGTypeArticle={setOGTypeArticle}>
@@ -97,12 +84,13 @@ const mainPanelTop = siteConfig.banner.enable
                 <Footer></Footer>
             </div>
         </div>
+
         <GoTopBottom></GoTopBottom>
     </div>
 </div>
 
 <!-- The things that should be under the banner, only the TOC for now -->
-<div class="absolute w-full z-0">
+<div class="absolute w-full z-0 hidden 2xl:block">
     <div class="relative max-w-[var(--page-width)] mx-auto">
         <!-- TOC component -->
         {siteConfig.toc.enable && <div id="toc-wrapper" class:list={["hidden lg:block transition absolute top-0 -right-[var(--toc-width)] w-[var(--toc-width)] flex items-center",
