--- a/src/layouts/MainGridLayout.astro
+++ b/src/layouts/MainGridLayout.astro
@@ -1,5 +1,5 @@
 ---
-import BackToTop from "@components/control/BackToTop.astro";
+import GoTopBottom from "@components/control/GoTopBottom.astro";
 import Footer from "@components/Footer.astro";
 import Navbar from "@components/Navbar.astro";
 import SideBar from "@components/widget/SideBar.astro";
@@ -98,7 +98,7 @@ const mainPanelTop = siteConfig.banner.enable
             </div>
         </div>
 
-        <BackToTop></BackToTop>
+        <GoTopBottom></GoTopBottom>
     </div>
 </div>
 
